# agent

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/agent/: agent 执行流程.md  agent.py  agent_runtime.py  demo.py  graph.py  langgraph.md  state.py  天气查询功能实现方案.md  第二版技术方案.md
backend/app/core/agent/executors/: base.py
backend/app/core/agent/executors/react/: executor.py  prompts.py  self_refine.py
backend/app/core/agent/memory/: manager.py  short_term.py  summarizer.py
backend/app/core/agent/nodes/: chat.py  context_builder.py  critic.py  finalize.py  human_approval.py  memory_write.py  router.py
backend/app/core/agent/observability/: callback_handler.py  logger.py  trace.py
backend/app/core/agent/tools/: builtin.py  registry.py  schema.py
backend/app/core/agent/tools/models/: __init__.py  weather.py
backend/app/core/agent/相关资源和文档/: Agent架构模式对比与混合架构示例.md  Agent第一版重构需求与目录方案.md  Agent第三版落地实现与SSE方案.md  LangGraph入门与状态图示例.md
backend/app/core/context-engineer/: 上下文工程技术方案.md
backend/app/core/prompt/: prompt_manage.py
backend/app/core/prompt/prompt-map/agent/: agent_sys_prompt.md
backend/app/core/prompt/prompt-map/rag/: llm-route.md  llm_generate.md  llm_query_rewrite.md  llm_relationship-score.md
backend/app/core/rag/rag_flow/: rag_flow.py
backend/app/core/rag/rag_mode/: agentic_rag.py  common_rag.py
backend/app/models/rag/: knowledge.py  knowledge_docs.py
backend/app/services/: agent.py  database.py  llm.py  rag.py
backend/app/utils/: config.py
(+22 files in other folders)
