[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "loguru>=0.7.3",
    "openai>=2.35.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.44",
    "transformers>=5.8.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
